updated information and photo link

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   
   <body style = "background: url(https://www.stockvault.net/data/2013/07/21/146721/preview16.jpg);">
     <h1>Peter W. Almeida II</h1>
-    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQGRcYSqhrcKkg/profile-displayphoto-shrink_200_200/0?e=1591833600&v=beta&t=spVDAMYmb29s65HcaykghKe-7SoNgiV8oFxYW4K0d0I">
+    <img src="https://avatars2.githubusercontent.com/u/63179764?s=460&u=146962013522fe4e4fa7b0d34e72bb640ce3cdcc&v=4">
     <h4>Phone:(352)871-8560</h4>
-    <h4>Address: Denver, CO 80231</h4>
+    <h4>Address: Atlanta, GA 30305</h4>
     <a href="https://www.linkedin.com/in/peter-almeida-ii">My Linkedin Profile</a>
     <hr style="margin-left: 0%; margin-right:50%">
     <h3>Management & Operations, Tech-Minded Professional</h3>
